--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./pgdata:/var/lib/postgresql/data
+      - ./data/pgdata:/var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4
@@ -25,3 +25,5 @@ services:
       - "5050:80"
     depends_on:
       - postgres
+    volumes:
+      - ./data/pgadmin_data:/var/lib/pgadmin
